syntax = "proto3";
package models;
option go_package = "./models";

import "github.com/infobloxopen/protoc-gen-gorm/proto/options/gorm.proto";

message TransactionInternalByAddress {
  option (gorm.opts) = {ormable: true};

  string transaction_hash = 1 [(gorm.field).tag = {primary_key: true}];
  int64 log_index = 2 [(gorm.field).tag = {primary_key: true}];
  string address = 3 [(gorm.field).tag = {primary_key: true}];
  int64 block_number = 4;
}
